--- a/src/template.html
+++ b/src/template.html
@@ -8,12 +8,14 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="home-btn">Home</button>
+            <button id="menu-btn">Menu</button>
+            <button id="about-btn">About</button>
         </nav>
     </header>
 
-    <div id="content"></div>
+    <div id="content">
+    
+    </div>
 </body>
 </html>
